wip: create frontend development articles

--- a/docs/tutorials/create-custom-application/react-application/pin-details-page.mdx
+++ b/docs/tutorials/create-custom-application/react-application/pin-details-page.mdx
@@ -37,7 +37,7 @@ For now, since we didn't cover security and file upload functionality yet, we'll
 
 ## Creating the Pin Details Page
 
-Unlike with the **Homepage**, where we already had some code in the already existing [`home.tsx`](#) file, for the **Pin Details** page, we'll need to create a new [`pinDetails.tsx`](#) file. The file will contain the [`PinDetails`](#) React component which we'll export via a new [`RoutePlugin`](#) plugin:
+Unlike with the **Homepage**, where we already had some code in the already existing [`home.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.04-pin-details-page/pinterest-clone/app/code/src/plugins/routes/home.tsx) file, for the **Pin Details** page, we'll need to create a new [`pinDetails.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.04-pin-details-page/pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx) file. The file will contain the [`PinDetails`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.04-pin-details-page/pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx#L33) React component which we'll export via a new [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/v5.14.0/packages/app/src/plugins/RoutePlugin.tsx#L8) plugin:
 
 ```tsx title="pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx"
 import React from "react";
@@ -117,7 +117,7 @@ As we can see, we're still using the [Ant Design](https://ant.design/docs/react/
 /pins/612fb852d1fb0300099b5d28
 ```
 
-In order to form this URL structure and be able to read the ID from it, we've passed `/pins/:id` as the `path` prop to our [`Route`](#) component:
+In order to form this URL structure and be able to read the ID from it, we've passed `/pins/:id` as the `path` prop to our [`Route`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/master/types/react-router/index.d.ts#L99) component:
 
 ```tsx title="pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx" {3}
 // We register routes via the `RoutePlugin` plugin.
@@ -126,13 +126,13 @@ export default new RoutePlugin({
 });
 ```
 
-Once we have that, the ID of the pin can be easily retrieved within our [`PinDetails`](#) React component, via `props.match.params.id`, for example:
+Once we have that, the ID of the pin can be easily retrieved within our [`PinDetails`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.04-pin-details-page/pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx#L33) React component, via `props.match.params.id`, for example:
 
 ```tsx title="pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx"
 const getPinQuery = useQuery(GET_PIN, { variables: { id: props.match.params.id } });
 ```
 
-Finally, in order to preserve type safety, notice how we've defined the [`PinDetails`](#) React component's props with the help of `RouteChildrenProps` type:
+Finally, in order to preserve type safety, notice how we've defined the [`PinDetails`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.04-pin-details-page/pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx#L33) React component's props with the help of [`RouteChildrenProps`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/master/types/react-router/index.d.ts#L80) type:
 
 ```tsx title="pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx"
 type Props = RouteChildrenProps<{ id: string }>;
@@ -146,7 +146,7 @@ In case you missed it, the [`@webiny/react-router`](https://www.npmjs.com/packag
 
 ## Registering the `RoutePlugin` Plugin
 
-One last step we need to take here is register the exported [`RoutePlugin`](#) plugin in the [`pinterest-clone/app/code/src/plugins/index.ts`](pinterest-clone/app/code/src/plugins/index.ts). We can do that like so:
+One last step we need to take here is register the exported [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/v5.14.0/packages/app/src/plugins/RoutePlugin.tsx#L8) plugin in the [`pinterest-clone/app/code/src/plugins/index.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.04-pin-details-page/pinterest-clone/app/code/src/plugins/index.ts). We can do that like so:
 
 ```ts pinterest-clone/app/code/src/plugins/index.ts {4,14}
 import { plugins } from "@webiny/plugins";
@@ -173,7 +173,7 @@ Without doing this step, visiting the **Pin Details** page still wouldn't work. 
 
 If you tried to check the results of the changes we've done so far, in terms of the functionality, everything should work as expected. The only thing we could do here is add a bit of styling, just so the page looks a bit nicer and more polished.
 
-So let's create a new [`pinDetails.scss`](#) file in [`pinterest-clone/app/code/src/styles`](#) and paste the following code into it:
+So let's create a new [`pinDetails.scss`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.04-pin-details-page/pinterest-clone/app/code/src/styles/pinDetails.scss) file in [`pinterest-clone/app/code/src/styles`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.04-pin-details-page/pinterest-clone/app/code/src/styles) and paste the following code into it:
 
 ```scss title="pinterest-clone/app/code/src/styles/pinDetails.scss"
 // Pin details page styles.
@@ -192,9 +192,9 @@ So let's create a new [`pinDetails.scss`](#) file in [`pinterest-clone/app/code/
 }
 ```
 
-Then, similarly to what we did in the previous [Registering the `RoutePlugin` Plugin](/docs/tutorials/create-custom-application/react-application/pin-details-page#registering-the-routeplugin-plugin) section, let's import this newly created file in the [`App.scss`](#) file, like so:
+Then, similarly to what we did in the previous [Registering the `RoutePlugin` Plugin](/docs/tutorials/create-custom-application/react-application/pin-details-page#registering-the-routeplugin-plugin) section, let's import this newly created file in the [`App.scss`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04.04-pin-details-page/pinterest-clone/app/code/src/App.scss) file, like so:
 
-```scss title="pinterest-clone/app/code/src/App.scss" {3}
+```scss title="pinterest-clone/app/code/src/App.scss" {4}
 // An entrypoint file that imports all styles your application might have.
 @import "./styles/global";
 @import "./styles/home";
