--- a/docs/tutorials/create-custom-application/react-application/layout.mdx
+++ b/docs/tutorials/create-custom-application/react-application/layout.mdx
@@ -22,6 +22,10 @@ In order to follow this tutorial, you must use Webiny version **5.13.0** or grea
 
 :::
 
+:::info
+The code that we will cover in this section can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04.01-layout). If you want to see the final code of the application we're building in this tutorial, check out the [`full-example`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example) folder.
+:::
+
 ## Ant Design Library
 
 As our first step, let's install the [Ant Design](https://ant.design/docs/react/introduce) React library and import it in our application code.
