fix: add full-example repo links

--- a/docs/tutorials/create-custom-application/graphql-api.mdx
+++ b/docs/tutorials/create-custom-application/graphql-api.mdx
@@ -24,6 +24,10 @@ In order to follow this tutorial, you must use Webiny version **5.13.0** or grea
 
 :::
 
+:::info
+The code that we cover in this section can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/03-graphql-api). Also, if you'd like to see the complete and final code of the application we're building, check out the [`full-example`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example) folder.
+:::
+
 ## Overview
 
 In the previous [Getting Started](/docs/tutorials/create-custom-application/getting-started) section, we've seen how we can quickly scaffold a new full stack application that consists of a React application on the frontend, and a GraphQL API on the backend. So, now that we have these two in place, we're ready to start building our custom application - a (super simplified) clone of the popular Pinterest social media service.
