--- a/docs/tutorials/create-custom-application/introduction.mdx
+++ b/docs/tutorials/create-custom-application/introduction.mdx
@@ -24,6 +24,11 @@ In order to follow this tutorial, you must use Webiny version **5.13.0** or grea
 
 :::
 
+:::info
+The complete code for the application we'll be building in this tutorial can also be found in our [GitHub examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example).
+:::
+
+
 ## Overview
 
 Except being the first [serverless CMS](https://www.webiny.com/serverless-cms) out there, Webiny is also categorized as a [serverless application framework](https://www.webiny.com/serverless-application-framework). In other words, it is a framework that enables developers to architect, build, and deploy solutions on top of the serverless cloud infrastructure, like [AWS Lambda](https://aws.amazon.com/lambda/), [Amazon DynamoDB](https://aws.amazon.com/dynamodb/), [Amazon S3](https://aws.amazon.com/s3/), and others.
