--- a/docs/tutorials/create-custom-application/react-application/homepage.mdx
+++ b/docs/tutorials/create-custom-application/react-application/homepage.mdx
@@ -22,6 +22,11 @@ In order to follow this tutorial, you must use Webiny version **5.13.0** or grea
 
 :::
 
+:::info
+The code that we cover in this section can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04.03-homepage). Also, if you'd like to see the complete and final code of the application we're building, check out the [`full-example`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example) folder.
+:::
+
+
 ## Overview
 
 Now that we have our **New Pin** modal dialog working as expected, we're can continue by creating the homepage. As seen in previous sections, the homepage lists all pins that were created by different users.
