--- a/docs/tutorials/create-custom-application/react-application/new-pin-modal-dialog.mdx
+++ b/docs/tutorials/create-custom-application/react-application/new-pin-modal-dialog.mdx
@@ -24,6 +24,10 @@ In order to follow this tutorial, you must use Webiny version **5.13.0** or grea
 
 :::
 
+:::info
+The code that we cover in this section can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04.02-new-pin-modal-dialog). Also, if you'd like to see the complete and final code of the application we're building, check out the [`full-example`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example) folder.
+:::
+
 ## Creating the New Pin Modal Dialog
 
 It's time to create the **New Pin** modal dialog, which the users will open by clicking on the **&#10753;** icon, located in the top right corner of the screen.
