--- a/docs/tutorials/extend-admin-area/security/admin-area.mdx
+++ b/docs/tutorials/extend-admin-area/security/admin-area.mdx
@@ -42,7 +42,7 @@ Learn more about the Webiny Security Framework in the [Security Framework](/docs
 ## Overview
 
 :::info
-The code that we will cover in this tutorial can also be found in our [GitHub examples repository](https://github.com/webiny/webiny-examples/tree/master/extend-admin-area-security/apps/admin/code/src/plugins/scaffolds/carManufacturers).
+The code that we cover in this tutorial can also be found in our [GitHub examples repository](https://github.com/webiny/webiny-examples/tree/master/extend-admin-area-security/apps/admin/code/src/plugins/scaffolds/carManufacturers).
 :::
 
 Let's wrap up this tutorial by adding authorization checks in the Admin Area application. What we want to achieve is having a piece of UI hide if the currently logged-in user doesn't have access to it (doesn't have the necessary security permissions).
