--- a/docs/tutorials/extend-admin-area/security/graphql-api.mdx
+++ b/docs/tutorials/extend-admin-area/security/graphql-api.mdx
@@ -34,7 +34,7 @@ Learn more about the Webiny Security Framework in the [Security Framework](/docs
 ## Overview
 
 :::info
-The code that we will cover in this tutorial can also be found in our [GitHub examples repository](https://github.com/webiny/webiny-examples/tree/master/extend-admin-area-security/api/code/graphql/src/plugins/scaffolds/carManufacturers).
+The code that we cover in this tutorial can also be found in our [GitHub examples repository](https://github.com/webiny/webiny-examples/tree/master/extend-admin-area-security/api/code/graphql/src/plugins/scaffolds/carManufacturers).
 :::
 
 At the moment, all car manufacturers-related queries and mutations that we've added to our GraphQL API are publicly exposed.
