--- a/docs/tutorials/extend-admin-area/security/introduction.mdx
+++ b/docs/tutorials/extend-admin-area/security/introduction.mdx
@@ -45,7 +45,7 @@ If you want to learn more about the main GraphQL API and how it works on the clo
 :::
 
 :::info
-The code that we will cover in this tutorial can also be found in our [GitHub examples repository](https://github.com/webiny/webiny-examples/tree/master/extend-admin-area-security).
+The code that we cover in this tutorial can also be found in our [GitHub examples repository](https://github.com/webiny/webiny-examples/tree/master/extend-admin-area-security).
 :::
 
 ## Security Permissions
