--- a/docs/tutorials/create-custom-application/getting-started.mdx
+++ b/docs/tutorials/create-custom-application/getting-started.mdx
@@ -27,6 +27,10 @@ In order to follow this tutorial, you must use Webiny version **5.13.0** or grea
 
 :::
 
+:::info
+The code that we cover in this section can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/02-getting-started). Also, if you'd like to see the complete and final code of the application we're building, check out the [`full-example`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example) folder.
+:::
+
 ## Full Stack Application Scaffold
 
 The best way to start building a new custom application would be to use the [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application) scaffold, which will automatically generate all of the fundamental application pieces for us. This includes the following.
