--- a/docs/tutorials/create-custom-application/react-application/pin-details-page.mdx
+++ b/docs/tutorials/create-custom-application/react-application/pin-details-page.mdx
@@ -22,6 +22,10 @@ In order to follow this tutorial, you must use Webiny version **5.13.0** or grea
 
 :::
 
+:::info
+The code that we cover in this section can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/04.04-pin-details-page). Also, if you'd like to see the complete and final code of the application we're building, check out the [`full-example`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example) folder.
+:::
+
 ## Overview
 
 The final piece of the puzzle is the **Pin Details** page.
