fix: add full-example repo links

--- a/docs/tutorials/create-custom-application/getting-started.mdx
+++ b/docs/tutorials/create-custom-application/getting-started.mdx
@@ -97,7 +97,7 @@ Ultimately, we should end up with the following output in our terminal:
   src={fullStackAppScaffold}
 />
 
-As we can see, the scaffold created the GraphQL API inside the [`pinterest-clone/api`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/02-getting-started/pinterest-clone/api), and the React application inside the [`pinterest-clone/app`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/02-getting-started/pinterest-clone/app) folder. Note that these folders are just [project application](/docs/key-topics/project-organization/project-applications-and-packages) folders (notice the `webiny.application.ts` files). The actual application code will be located in [`pinterest-clone/api/code/graphql`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/02-getting-started/pinterest-clone/api/code/graphql) and [`pinterest-clone/app/code`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/02-getting-started/pinterest-clone/app/code) folders.
+As we can see, the scaffold created the GraphQL API inside the [`pinterest-clone/api`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/02-getting-started/pinterest-clone/api), and the React application inside the [`pinterest-clone/app`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/02-getting-started/pinterest-clone/app) folder.
 
 ```bash
 pinterest-clone
@@ -113,6 +113,15 @@ pinterest-clone
     └── webiny.application.ts         # Project application's manifest file.
 ```
 
+Note that these folders are just [project application](/docs/key-topics/project-organization/project-applications-and-packages) folders. The actual application code will be located in [`pinterest-clone/api/code/graphql`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/02-getting-started/pinterest-clone/api/code/graphql) and [`pinterest-clone/app/code`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/02-getting-started/pinterest-clone/app/code) folders.
+
+:::info
+Project application folders can be easily recognized because they always contain the `webiny.application.ts` manifest file. In our case, these are [`pinterest-clone/api/webiny.application.ts`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/02-getting-started/pinterest-clone/api/webiny.application.ts) and [`pinterest-clone/app/webiny.application.ts`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/02-getting-started/pinterest-clone/app/webiny.application.ts).
+:::
+
+Also, take note of the [`pinterest-clone/api/pulumi`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/02-getting-started/pinterest-clone/api/pulumi) and [`pinterest-clone/app/pulumi`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/02-getting-started/pinterest-clone/app/pulumi) folders. This is where the cloud infrastructure code lives, and by default, it contains the definitions of all of the necessary resources that are needed in order for our application to run properly.
+
+In the following sections, we'll be doing a couple of additions and modifications here, so stay tuned.
 
 ## Using the Watch Command
 
