--- a/docs/tutorials/create-custom-application/graphql-api.mdx
+++ b/docs/tutorials/create-custom-application/graphql-api.mdx
@@ -97,8 +97,9 @@ type Pin {
 This is great because, as we can see, the type already contains two out of three fields we wanted our central **Pin** entity to have. The only field that's missing here is the `coverImage`. Don't worry, we'll see how we can add this field soon.
 
 :::note In Case You Missed It
-In order to actually see the new operations in your GraphQL API, your application code needs to be redeployed. This can be done as usual via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command, or, even easier, via the [`webiny watch`](/docs/how-to-guides/use-watch-command) command. The latter will not only deploy the changes, but also start a new watch session, which will automatically redeploy further application code changes, as you perform them.
+In order to actually see the new operations in your GraphQL API, your application code needs to be redeployed. This can be done as usual via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project), or, even easier, via the [`webiny watch`](/docs/how-to-guides/use-watch-command) command. The latter will not only deploy the changes, but also start a new watch session, which will automatically redeploy further application code changes, as you perform them.
 
+For more information on how to use it, revisit the [Using the Watch Command](/docs/tutorials/create-custom-application/getting-started#using-the-watch-command) topic in the previous [Getting Started](/docs/tutorials/create-custom-application/getting-started#using-the-watch-command) section.
 :::
 
 ## Quick Test
