--- a/docs/tutorials/create-custom-application/introduction.mdx
+++ b/docs/tutorials/create-custom-application/introduction.mdx
@@ -9,6 +9,7 @@ description: Learn how to create a custom full stack application, powered by Rea
 import CenteredImage from "@components/CenteredImage";
 import viewPin from "./introduction/view-pin.png";
 import viewPins from "./introduction/view-pins.png";
+import plan from "./introduction/plan.png";
 
 :::tip WHAT YOU’LL LEARN
 
@@ -76,39 +77,35 @@ This is the end result we're aiming to achieve:
 
 For now, we won't go into the specifics of which tools and libraries we will use, but we will say the application will be completely serverless. More on this soon, in the following sections.
 
-<!--
-Which means we'll need to cover the following topics:
+## The Plan
 
-- how to use the Full Stack Application scaffold in order to start building in no time
-- create the necessary user interface and GraphQL API for creating and listing pins
-- using [Amazon Cognito](https://aws.amazon.com/cognito/), enable users to sign up and later sign in
-- using [Amazon S3](https://aws.amazon.com/s3/), enable users to upload and attach an image to pins
+Before we start doing any coding, let's quickly outline the plan we intend to follow over the next couple of sections of this tutorial.
 
-<CenteredImage src={preview} alt="The Pinterest Clone Application" />
+<CenteredImage src={plan} canEnlarge={false} shadow={false} alt="Create Custom Application - The Plan" />
 
-1. enable users to list pins created by different users:
+#### [Getting Started](/docs/tutorials/create-custom-application/getting-started)
 
+We start our journey by introducing the [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application) scaffold, which will create the two fundamental pieces of our application: the GraphQL API and the React application that's interacting with it.
 
+We'll also dedicate a couple of sections on how to approach development using the [`webiny watch`](/docs/how-to-guides/use-watch-command) command, just so where all on the same page here.
 
-2. the pin page, which will show pin details:
+#### [GraphQL API](/docs/tutorials/create-custom-application/graphql-api)
 
-<CenteredImage shadow={false} alt="Viewing a Pin" src={viewPin} />
+In this section, we start working on our GraphQL API, by extending it with the new `Pin` types and a basic set of related GraphQL query and mutation operations.
 
+#### [React Application](/docs/tutorials/create-custom-application/react-application/introduction)
 
-### Tools and Libraries
+Once our GraphQL API is in place, we're ready to start working on our frontend React application. The section itself is also organized into five sections, ensuring we don't rush with any of the steps we need to cover.
 
-As our application's backend, we'll create a simple GraphQL API which will define all of the necessary GraphQL types, query, mutations, and their respective resolver functions.
+#### [Security](#)
 
-The GraphQL API will be consumed by a frontend React application, which will consist of two pages:
+In this section, we show how we can secure our application by integrating [Amazon Cognito](https://aws.amazon.com/cognito/).
 
+Apart from providing a way for users to sign up and sign in into the application, we also gain the ability to tie every created pin to a user, which we'll display in the application. Last but certainly not the least, we also get to implement necessary security (authorization) checks on the GraphQL API.
 
+#### [File Upload](#)
 
-With these, we'll also need to create a simple form which will enable users to create new pins. As mentioned, every pin will contain a cover image, so for storing these, we'll use [Amazon S3](https://aws.amazon.com/s3/).
-
-We'll also need signup and log in functionality, for which we'll use [Amazon Cognito](https://aws.amazon.com/cognito/).
-
-All of these, and more, will be covered in the following sections of this tutorial. -->
-
+Finally, in today's world, no application is complete without a file upload feature, so that's what we'll cover in this section. By enabling users to attach an image to their pins, the whole website will become more lively and more pleasant to use.
 
 ## Prerequisites
 
