fix: apply minor tweaks / fixes

--- a/docs/tutorials/create-custom-application/react-application/homepage.mdx
+++ b/docs/tutorials/create-custom-application/react-application/homepage.mdx
@@ -2,8 +2,8 @@
 id: homepage
 title: Homepage
 sidebar_label: Homepage
-keywords: ["create", "custom", "application", "react", "application", "basic", "application", "layout"]
-description: Learn how to build a simple React application that interacts with a GraphQL API.
+keywords: ["create", "custom", "application", "react", "application", "homepage"]
+description: Learn how to create a simple homepage that lists the pins created by different users.
 ---
 
 import CenteredImage from "@components/CenteredImage";
@@ -12,7 +12,9 @@ import homepage from "./homepage/homepage.png";
 
 :::tip WHAT YOU’LL LEARN
 
-- how to adapt the existing Layout component to our needs
+- how to create a simple homepage that lists the pins created by different users
+- how to execute GraphQL queries using already configured [Apollo Client](https://www.apollographql.com/docs/react/v2)
+- quick introduction to the [`@webiny/react-router`](https://github.com/webiny/webiny-js/tree/next/packages/react-router) library
 
 :::
 
