--- a/docs/tutorials/create-custom-application/react-application/introduction.mdx
+++ b/docs/tutorials/create-custom-application/react-application/introduction.mdx
@@ -2,7 +2,7 @@
 id: introduction
 title: Introduction
 sidebar_label: Introduction
-keywords: ["create", "custom", "application", "react", "application"]
+keywords: ["create", "custom", "application", "react", "application", "introduction"]
 description: Learn how to build a simple React application that interacts with a GraphQL API.
 ---
 
@@ -15,7 +15,7 @@ import newPinModalDialog from "./introduction/new-pin-modal-dialog.png";
 
 - how to build a simple React application that interacts with an existing GraphQL API
 - what the React application will look like
-- the plan we'll follow in the following sections
+- the plan we intend to follow in the next couple of sections
 :::
 
 :::info Can I use this?
