--- a/docs/tutorials/create-custom-application/react-application/layout.mdx
+++ b/docs/tutorials/create-custom-application/react-application/layout.mdx
@@ -3,7 +3,7 @@ id: layout
 title: Layout
 sidebar_label: Layout
 keywords: ["create", "custom", "application", "react", "application", "basic", "application", "layout"]
-description: Learn how to build a simple React application that interacts with a GraphQL API.
+description: Learn how to tweak initially generated files to create a basic layout for our application.
 ---
 
 import CenteredImage from "@components/CenteredImage";
@@ -12,7 +12,8 @@ import endResult from "./layout/end-result.png";
 
 :::tip WHAT YOU’LL LEARN
 
-- how to adapt the existing `Layout` component to our needs
+- how to adapt the existing `Layout` component and CSS styles to better suit the needs of our application
+- how to add extra NPM libraries via the [yarn workspace](https://classic.yarnpkg.com/en/docs/cli/workspace/) command
 
 :::
 
