--- a/docs/tutorials/create-custom-application/react-application/new-pin-modal-dialog.mdx
+++ b/docs/tutorials/create-custom-application/react-application/new-pin-modal-dialog.mdx
@@ -4,7 +4,7 @@ title: New Pin Modal Dialog
 sidebar_label: New Pin Modal Dialog
 keywords:
   ["create", "custom", "application", "react", "application", "new", "pin", "modal", "dialog"]
-description: Learn how to build a simple React application that interacts with a GraphQL API.
+description: Learn how to create a simple modal dialog over which users can create new pins.
 ---
 
 import CenteredImage from "@components/CenteredImage";
