--- a/docs/tutorials/create-custom-application/react-application/pin-details-page.mdx
+++ b/docs/tutorials/create-custom-application/react-application/pin-details-page.mdx
@@ -4,7 +4,7 @@ title: Pin Details Page
 sidebar_label: Pin Details Page
 keywords:
   ["create", "custom", "application", "react", "application", "basic", "application", "layout"]
-description: Learn how to build a simple React application that interacts with a GraphQL API.
+description: Learn how to create a simple page that's responsible for displaying details for a particular pin.
 ---
 
 import CenteredImage from "@components/CenteredImage";
@@ -12,7 +12,9 @@ import pinDetailsPage from "./pin-details-page/pin-details-page.png";
 
 :::tip WHAT YOU’LL LEARN
 
-- how to adapt the existing Layout component to our needs
+- how to create a simple page that's responsible for displaying details for a particular pin
+- how to execute GraphQL queries using already configured [Apollo Client](https://www.apollographql.com/docs/react/v2)
+- how to read parameters sent via URL and use them in React components
 
 :::
 
