--- a/docs/tutorials/create-custom-application/introduction.mdx
+++ b/docs/tutorials/create-custom-application/introduction.mdx
@@ -15,6 +15,7 @@ import plan from "./introduction/plan.png";
 
 - an overview of serverless application development
 - the goal of this tutorial
+- the plan we intend to follow
 - what are the prerequisites that need to be fulfilled in order to follow this tutorial
 
 :::
@@ -105,7 +106,7 @@ Apart from providing a way for users to sign up and sign in into the application
 
 #### [File Upload](#)
 
-Finally, in today's world, no application is complete without a file upload feature, so that's what we'll cover in this section. By enabling users to attach an image to their pins, the whole website will become more lively and more pleasant to use.
+In today's world, no application is complete without a file upload feature, so that's what we'll cover in this final section of this tutorial. By enabling users to attach an image to their pins, the whole website will become more lively and more pleasant to use.
 
 ## Prerequisites
 
@@ -114,3 +115,7 @@ In order to follow this tutorial, you should have a solid understanding of [Java
 Furthermore, on the frontend side, for anything styling-related, we'll use [Sass](https://sass-lang.com/), which is already included in every Webiny project. We'll also use the [Ant Design](https://ant.design/docs/react/introduce) React library to create the majority of the user interface. For both of these, a basic understanding will suffice.
 
 Finally, note that you should have a new Webiny project set up on your machine, version `5.13.0` or greater.
+
+:::info
+Didn't had the chance to set up Webiny yet? Check out the [Install Webiny](/docs/tutorials/create-custom-application/introduction) tutorial.
+:::
