fix: add short usage section

--- a/docs/how-to-guides/scaffolding/extend-admin-area.mdx
+++ b/docs/how-to-guides/scaffolding/extend-admin-area.mdx
@@ -86,6 +86,16 @@ Note that the supporting GraphQL API has its own cloud infrastructure code, loca
 
 ## Development
 
+### Usage
+
+In order to use this scaffold, from your project root, simply run the `webiny scaffold` command:
+
+```bash
+yarn webiny scaffold
+```
+
+Then, from the list of all available scaffolds, select **Extend Admin Area** and follow the on-screen instructions.
+
 ### Essential Files
 
 The following are the most essential files and folders that are generated in the scaffolding process.
