--- a/docs/how-to-guides/scaffolding/extend-graphql-api.mdx
+++ b/docs/how-to-guides/scaffolding/extend-graphql-api.mdx
@@ -107,6 +107,16 @@ Of course, if additional cloud infrastructure resources are needed, you're free 
 
 ## Development
 
+### Usage
+
+In order to use this scaffold, from your project root, simply run the `webiny scaffold` command:
+
+```bash
+yarn webiny scaffold
+```
+
+Then, from the list of all available scaffolds, select **Extend GraphQL API** and follow the on-screen instructions.
+
 ### Essential Files
 
 The following are the most essential files and folders that are generated in the scaffolding process.
