--- a/docs/how-to-guides/scaffolding/full-stack-application.mdx
+++ b/docs/how-to-guides/scaffolding/full-stack-application.mdx
@@ -64,6 +64,16 @@ Check out the React Application scaffold's [Development](/docs/how-to-guides/sca
 
 ## Development
 
+### Usage
+
+In order to use this scaffold, from your project root, simply run the `webiny scaffold` command:
+
+```bash
+yarn webiny scaffold
+```
+
+Then, from the list of all available scaffolds, select **Full Stack Application** and follow the on-screen instructions.
+
 ### Essential Files and Folders
 
 The following is brief overview of the essential files and folders that are created during the scaffolding process. For more information, we encourage you to check out the dedicated [React Application](/docs/how-to-guides/scaffolding/react-application#essential-files-and-folders) and [GraphQL API](/docs/how-to-guides/scaffolding/graphql-api#essential-files-and-folders) guides.
