--- a/docs/how-to-guides/scaffolding/graphql-api.mdx
+++ b/docs/how-to-guides/scaffolding/graphql-api.mdx
@@ -64,6 +64,16 @@ Except for the application and cloud infrastructure code, the scaffold also crea
 
 ## Development
 
+### Usage
+
+In order to use this scaffold, from your project root, simply run the `webiny scaffold` command:
+
+```bash
+yarn webiny scaffold
+```
+
+Then, from the list of all available scaffolds, select **GraphQL API** and follow the on-screen instructions.
+
 ### Essential Files and Folders
 
 The following are the most essential files and folders that are created during the scaffolding process.
