--- a/docs/how-to-guides/scaffolding/react-application.mdx
+++ b/docs/how-to-guides/scaffolding/react-application.mdx
@@ -71,6 +71,16 @@ But, once it's time to deploy it, you can do that as usual, with the [`webiny de
 
 ## Development
 
+### Usage
+
+In order to use this scaffold, from your project root, simply run the `webiny scaffold` command:
+
+```bash
+yarn webiny scaffold
+```
+
+Then, from the list of all available scaffolds, select **React Application** and follow the on-screen instructions.
+
 ### Essential Files and Folders
 
 The following are the most essential files and folders that are created during the scaffolding process.
