--- a/docs/how-to-guides/scaffolding/ci-cd.mdx
+++ b/docs/how-to-guides/scaffolding/ci-cd.mdx
@@ -142,7 +142,7 @@ In order to enable automatic deployments, for each environment, you'll need to s
 Learn how to create AWS credentials in the [Configure AWS Credentials](/docs/how-to-guides/deployment/aws/configure-aws-credentials) guide.
 :::
 
-With credentials, we also need to specify the AWS region via the `AWS_REGION` environment variable.
+With credentials, we also need to specify the [AWS region](https://aws.amazon.com/about-aws/global-infrastructure/regions_az/) via the `AWS_REGION` environment variable.
 
 ###### 2. `PULUMI_SECRETS_PROVIDER` and `PULUMI_CONFIG_PASSPHRASE`
 
