wip: create security section

--- a/docs/tutorials/create-custom-application/graphql-api.mdx
+++ b/docs/tutorials/create-custom-application/graphql-api.mdx
@@ -122,6 +122,8 @@ Once run, we should receive a response similar to the following (the only piece 
 
 <CenteredImage alt={'"CreatePin Mutation" Test'} src={createPinMutation} />
 
+NOT SECURE! TODO
+
 :::tip Misplaced GraphQL API URL?
 Running the `yarn webiny output pinterest-clone/api --env dev` command from your project root will display all of the values that were exported from your cloud infrastructure code. That includes GraphQL API URL, Amazon DynamoDB table name, AWS region, and more.
 :::
