--- a/docs/release-notes/5.15.0/changelog.mdx
+++ b/docs/release-notes/5.15.0/changelog.mdx
@@ -23,6 +23,29 @@ Please check the [Webiny 5.15.0 migration guide](/docs/release-notes/5.15.0/upgr
 We extracted existing DynamoDB + Elasticsearch storage logic into [@webiny/api-page-builder-so-ddb-es](https://github.com/webiny/webiny-js/tree/next/packages/api-page-builder-so-ddb-es) package.
 This allows us to create package that stores the data into DynamoDB only, or some other database.
 
+We moved `SearchPagesPlugin`, `SearchLatestPagesPlugin` and `SearchPublishedPages` from [@webiny/api-page-builder](https://github.com/webiny/webiny-js/tree/next/packages/api-page-builder) to [@webiny/api-page-builder-so-ddb-es](https://github.com/webiny/webiny-js/tree/next/packages/api-page-builder-so-ddb-es).
+
+### GraphQL
+##### Changes in pages schema:
+* query `listPublishedPages` `page` argument is changed to `after` - pass the `meta.cursor` value to `after` to paginate
+* `meta` output was changed to be the same as in other apps
+```graphql
+meta {
+	hasMorePages: Boolean!
+	totalCount: Number!
+	cursor: String
+}
+```
+##### Changes in menu schema:
+* `sort` is now a list of strings and default sort is `createdOn_DESC`
+* the type `PbMenu` `items` input and output are an array of JSON objects
+
+
+### Prerendering
+We extracted prerendering logic into separate file, [@webiny/api-page-builder/prerendering](https://github.com/webiny/webiny-js/tree/next/packages/api-page-builder/src/prerendering/index.ts), so it is now imported into `api/code/graphql/src/index.ts` file. If you do not want to use prerendering of pages, feel free to remove it from that file.
+
+
+
 ## Elasticsearch [#1872](https://github.com/webiny/webiny-js/pull/1872)
 
 ### Query modifier plugin [#1872](https://github.com/webiny/webiny-js/pull/1872)
@@ -36,3 +59,8 @@ There are new `ElasticsearchBodyModifierPlugin` and `ElasticsearchSortModifierPl
 For Page Builder check out `PageElasticsearchBodyModifierPlugin` and `PageElasticsearchSortModifierPlugin` classes.
 
 For File Manager check out  `FileElasticsearchBodyModifierPlugin` and `FileElasticsearchSortModifierPlugin` classes.
+
+
+## Headless CMS [#1872](https://github.com/webiny/webiny-js/pull/1872)
+
+The definition of Elasticsearch field now uses `CmsEntryElasticsearchFieldPlugin` class instead of `ElasticsearchFieldPlugin`.
