--- a/docs/release-notes/5.15.0/changelog.mdx
+++ b/docs/release-notes/5.15.0/changelog.mdx
@@ -18,15 +18,18 @@ Please check the [Webiny 5.15.0 migration guide](/docs/release-notes/5.15.0/upgr
 
 ## Page Builder
 
-### Storage operations [#1872](https://github.com/webiny/webiny-js/pull/1872)
+### Storage Operations ([#1872](https://github.com/webiny/webiny-js/pull/1872))
 
-We extracted existing DynamoDB + Elasticsearch storage logic into [@webiny/api-page-builder-so-ddb-es](https://github.com/webiny/webiny-js/tree/next/packages/api-page-builder-so-ddb-es) package.
+We extracted existing DynamoDB + Elasticsearch storage logic into `@webiny/api-page-builder-so-ddb-es` package.
 This allows us to create package that stores the data into DynamoDB only, or some other database.
 
-We moved `SearchPagesPlugin`, `SearchLatestPagesPlugin` and `SearchPublishedPages` from [@webiny/api-page-builder](https://github.com/webiny/webiny-js/tree/next/packages/api-page-builder) to [@webiny/api-page-builder-so-ddb-es](https://github.com/webiny/webiny-js/tree/next/packages/api-page-builder-so-ddb-es).
+We moved `SearchPagesPlugin`, `SearchLatestPagesPlugin` and `SearchPublishedPages` from `@webiny/api-page-builder` to `@webiny/api-page-builder-so-ddb-es`.
 
 ### GraphQL
-##### Changes in pages schema:
+##### Common changes
+* `sort` is now a list of strings and default sort is `createdOn_DESC` - you can check out the schema to see the fields you can sort by
+
+##### Changes In Pages Schema:
 * query `listPublishedPages` `page` argument is changed to `after` - pass the `meta.cursor` value to `after` to paginate
 * `meta` output was changed to be the same as in other apps
 ```graphql
@@ -35,24 +38,24 @@ meta {
 	totalCount: Number!
 	cursor: String
 }
+
 ```
-##### Changes in menu schema:
-* `sort` is now a list of strings and default sort is `createdOn_DESC`
+##### Changes In Menu Schema:
 * the type `PbMenu` `items` input and output are an array of JSON objects
 
 
 ### Prerendering
-We extracted prerendering logic into separate file, [@webiny/api-page-builder/prerendering](https://github.com/webiny/webiny-js/tree/next/packages/api-page-builder/src/prerendering/index.ts), so it is now imported into `api/code/graphql/src/index.ts` file. If you do not want to use prerendering of pages, feel free to remove it from that file.
+We extracted prerendering logic into separate file, `@webiny/api-page-builder/prerendering`, so it is now imported into `api/code/graphql/src/index.ts` file. If you do not want to use prerendering of pages, feel free to remove it from that file.
 
 
+## Elasticsearch
 
-## Elasticsearch [#1872](https://github.com/webiny/webiny-js/pull/1872)
+### Query Modifier Plugin ([#1872](https://github.com/webiny/webiny-js/pull/1872))
+Due to changes in the way of how query building for Elasticsearch works we changed `ElasticsearchQueryModifierPlugin` in the `@webiny/api-elasticsearch` package.
+It is an abstract class now, so if you used it to modify the query, please change it to either `PageElasticsearchQueryModifierPlugin` for `@webiny/api-page-builder` or `FileElasticsearchQueryModifierPlugin` for `@webiny/api-file-manager`.
+Also, in that abstract class, method named `apply` was renamed to `modifyQuery`.
 
-### Query modifier plugin [#1872](https://github.com/webiny/webiny-js/pull/1872)
-Due to changes in the way of how query building for Elasticsearch works we changed `ElasticsearchQueryModifierPlugin` in the [@webiny/api-elasticsearch](https://github.com/webiny/webiny-js/tree/next/packages/api-elasticsearch) package.
-It is an abstract class now, so if you used it to modify the query, please change it to either `PageElasticsearchQueryModifierPlugin` for `@webiny/api-page-builder` or `FileElasticsearchQueryModifierPlugin` for `@webiny/api-file-manager`. Also, in that abstract class, method named `apply` was renamed to `modifyQuery`.
-
-### Body and sort modifier plugins [#1872](https://github.com/webiny/webiny-js/pull/1872)
+### Body And Sort Modifier Plugins ([#1872](https://github.com/webiny/webiny-js/pull/1872))
 
 There are new `ElasticsearchBodyModifierPlugin` and `ElasticsearchSortModifierPlugin` abstract classes, which are extended in each of the application that uses Elasticsearch. As their name suggests, they are specialized to modify either body or sort parameters of the Elasticsearch query.
 
@@ -61,6 +64,6 @@ For Page Builder check out `PageElasticsearchBodyModifierPlugin` and `PageElasti
 For File Manager check out  `FileElasticsearchBodyModifierPlugin` and `FileElasticsearchSortModifierPlugin` classes.
 
 
-## Headless CMS [#1872](https://github.com/webiny/webiny-js/pull/1872)
+## Headless CMS ([#1872](https://github.com/webiny/webiny-js/pull/1872))
 
 The definition of Elasticsearch field now uses `CmsEntryElasticsearchFieldPlugin` class instead of `ElasticsearchFieldPlugin`.
